removing redundant css styling code, aim is to keep everything tidy as I go along. Prevent random issues cropping up and make it easier for me to follow and not get overwhlemed by everything

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,7 +49,6 @@ h1 {
 
 .nav__links {
   width: 100%;
-  height: 100%;
   display: none;
   margin: 0;
 }
@@ -62,13 +61,9 @@ nav ul {
 }
 
 .nav__links a {
-  align-items: center;
-  justify-content: center;
-  text-align: center;
   text-decoration: none;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.5rem;
   color: #fff;
   margin-bottom: 0;
 }
@@ -82,30 +77,12 @@ a:focus {
 @media screen and (min-width: 636px) {
   .nav__links {
     display: block;
-    position: static;
     width: auto;
-    background: none;
-    margin: 0;
   }
 
   .nav__links a {
     display: inline-block;
     padding: 8px 16px;
-    margin: 0;
-    text-align: centre;
-  }
-
-  ul,
-  li {
-    margin: 0;
-    padding: 0;
-  }
-
-  nav ul {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    height: 100%;
   }
 
   /* Mobile styles */
@@ -127,7 +104,6 @@ a:focus {
 
     .nav__links ul {
       flex-direction: column;
-      gap: 0;
     }
 
     .nav__links li {
